team@breezedigital.ca

--- a/project.yaml
+++ b/project.yaml
@@ -5,9 +5,10 @@ basic:
         staging: 'https://new.panoramaresort.com'
         development: ''
     breakpoints:
-        - 375
+        - 576
         - 768
         - 1440
+        - 1920
     pages:
         - /
         - /planning/the-approach
@@ -43,7 +44,7 @@ basic:
 advanced:
     mask: ''
     remove: ''
-    delay: 10
+    delay: 0
     scroll: false
     headers: {  }
     cookies: ''
@@ -54,6 +55,17 @@ advanced:
     night_mode: false
     retina_images: false
     single_ip: false
+    login:
+        type: none
+        click_element: false
+        click_element_selector: ''
+        login_url: ''
+        username: ''
+        password: ''
+        username_selector: ''
+        password_selector: ''
+        submit_selector: ''
+        after_login_selector: ''
     performance:
         workers_production: 30
         workers_nonproduction: 10
