--- a/project.yaml
+++ b/project.yaml
@@ -68,7 +68,7 @@ advanced:
         after_login_selector: ''
     performance:
         workers_production: 30
-        workers_nonproduction: 10
+        workers_nonproduction: '30'
         workers_production_delay: 0
         workers_nonproduction_delay: 0
     stabilize: true
